<resources>
    <string name="app_name">MyMoney</string>

    <string name="label_title_profile">Profile</string>
    <string name="label_no_parcel_found">No parcel found</string>
    <string name="label_request_parcel">Please request a parcel for listing</string>
    <string name="label_try_again">Try again!</string>
    <string name="label_no_messages">No messages</string>
    <string name="label_no_active_chats">You have no active chats</string>
    <string name="label_something_went_wrong">Something went wrong, Please try again!!</string>
    <string name="label_no_internet">No internet connection</string>
    <string name="get_started">Get Started</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="title">Title</string>
    <string name="subtitle">Subtitle</string>
    <string name="select_an_account">Select an account</string>
    <string name="apply">Apply</string>
    <string name="add_new_category">Add new category</string>
    <string name="type">Type:</string>
    <string name="name">Name:</string>
    <string name="icon">Icon</string>
    <string name="save">SAVE</string>
    <string name="cancel">CANCEL</string>
    <string name="delete">DELETE</string>
    <string name="edit_category">Edit category</string>
    <string name="add_new_category_capital">ADD NEW CATEGORY</string>
    <string name="untitled">Untitled</string>
    <string name="add_new_account">Add new account</string>
    <string name="initial_amount">Initial amount</string>
    <string name="edit_account">Edit account</string>
    <string name="add_new_account_capital">ADD NEW ACCOUNT</string>

</resources>